# wrestling-stats

./: .gitattributes  .gitignore  AGENTS.md  README.md  analyze_unparsed_rounds.py  dual_meet_console.txt  dual_meet_sample.html  dual_meet_test_output.txt  main.py  package.json  pyproject.toml  round_with_matches.html  start_ui.py  test_dual_meet_parsing.py  test_dual_meet_parsing2.py  test_edge_cases.py  verify_dual_meet_parsing.py
.github/workflows/: deploy.yml
code/: __init__.py  calculate_elo.py  config.py  extract_results.py  parse_round_html.py  reprocess_tournaments.py  scrape_tournament_rounds.py  scrape_tournaments.py  shared_trackwrestling.py
db/: schema.dbml  start_duckb_ui.py
docs/: schema.dbml
observable-framework-app/: README.md  observablehq.config.js  package-lock.json
observable-framework-app/src/: elo-rankings.md  index.md  individual_stats.md
observable-framework-app/src/data/: elo_history.parquet.py  wrestlers.parquet.py
observable-framework-app/src/individual_stats/: [gov_body].md
observable-framework-app/src/individual_stats/data/: elo_history_[gov_body].parquet.py  wrestlers_[gov_body].parquet.py
observable-framework-app/src/leaderboards/: [gov_body].md
observable-framework-app/src/leaderboards/data/: individual_leaderboards_[gov_body].parquet.py  team_leaderboards_[gov_body].parquet.py
output/: trackwrestling.db  trackwrestling_nvwf.db  trackwrestling_nysphsaa.db  trackwrestling_vhsl.db  trackwrestling_vhsl.db.wal
test/: test_parse_matches.py
